Adding my helper robot to the screen

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
       <div class="col-xs-3 operation" id="add"><p>+</p></div>
     </div><!--end of  4th row-->
   </div><!--end of keyboard-->
-  
+    <div id="robot">
+        <div id="head">
+            <div id="eyeR"></div>
+            <div id="eyeL"></div>
+        </div>
+        <div id="torso"></div>
+        <div id="lower"></div>
+        <div id="legs"></div>
+    </div>
 </div><!--end of container-->
 
 </body>
