Continued styling of robot and added a button panel on his torso

--- a/index.html
+++ b/index.html
@@ -61,10 +61,35 @@
   </div><!--end of keyboard-->
     <div id="robot">
         <div id="head">
-            <div id="eyeR"></div>
-            <div id="eyeL"></div>
+            <div id="eyeR">&#149</div>
+            <div id="eyeL">&#149</div>
+            <div id="mouth"></div>
         </div>
-        <div id="torso"></div>
+        <div id="torso">
+            <div id="panel">
+                <div class="panelRow">
+                    <div class="panelBtn btnWht"></div>
+                    <div class="panelBtn btnRed"></div>
+                    <div class="panelBtn btnDgrd"></div>
+                    <div class="panelBtn btnBlk"></div>
+                    <div class="panelBtn btnDgrd"></div>
+                </div> 
+                <div class="panelRow">
+                    <div class="panelBtn btnDgrd"></div>
+                    <div class="panelBtn btnWht"></div>
+                    <div class="panelBtn btnRed"></div>
+                    <div class="panelBtn btnBlk"></div>
+                    <div class="panelBtn btnBlk"></div>
+                </div> 
+                <div class="panelRow">
+                    <div class="panelBtn btnDgrd"></div>
+                    <div class="panelBtn btnWht"></div>
+                    <div class="panelBtn btnBlk"></div>
+                    <div class="panelBtn btnRed"></div>
+                    <div class="panelBtn btnWht"></div>
+                </div>
+            </div>
+        </div>
         <div id="lower"></div>
         <div id="legs"></div>
     </div>
