animated the robot, added speech bubble, fixed problem of being able to add multiple periods to one number

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       <div class="col-xs-3 operation" id="add"><p>+</p></div>
     </div><!--end of  4th row-->
   </div><!--end of keyboard-->
+    <div class="bubble" hidden>Hello User, what can I calculate for you today?</div>
     <div id="robot">
         <div id="head">
             <div id="eyeR">&#149</div>
